# rust-pipeline-test

./: Cargo.toml  README.md  package.json  serverless.yaml
.circleci/: config.yml
.github/workflows/: .github-actions-demo.yml
